Fix figures spacing under images

--- a/assets/css/terminal.css
+++ b/assets/css/terminal.css
@@ -70,7 +70,6 @@ p,
 ul,
 ol,
 img,
-figure,
 video,
 table {
   margin: calc(var(--line-height) * 1.2) 0;
@@ -208,7 +207,7 @@ img {
 
 figure img,
 figure video {
-  margin-bottom: 0;
+  margin: 0;
 }
 
 figure figcaption {
